--- a/qiyexiaohao/login.html
+++ b/qiyexiaohao/login.html
@@ -71,7 +71,7 @@
 	<body>
 		<div id="app">
 			<header class="mui-bar mui-bar-nav">
-				<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
+				<!--<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>-->
 				<h1 class="mui-title">登录</h1>
 			</header>
 			<div class="mui-content mui-fullscreen mui-scroll-wrapper">
@@ -157,6 +157,7 @@
 				},
 				domReady: function() {
 					_.init(), _(".mui-scroll-wrapper").scroll();
+					w.doubleTapExit();
 				}
 			})
 		})(mui, window, util)
