--- a/qiyexiaohao/contactDetail.html
+++ b/qiyexiaohao/contactDetail.html
@@ -20,7 +20,7 @@
 		<div id="app" class="mui-content mui-scroll-wrapper mui-fullscreen">
 			<div class="mui-scroll">
 				<div class="detail_body">
-					<div class="mui-pull-right span_right" @tap=""><span class="mui-icon iconfont icon-dingdan-duanxin"></span></div>
+					<div class="mui-pull-right span_right" @tap="toMsg()"><span class="mui-icon iconfont icon-dingdan-duanxin"></span></div>
 					<div class="detail_body_h" @tap="toTel()">
 						<span class="color_333 font_16">王大锤</span>
 						<span class="i_flag">副1</span>
