--- a/qiyexiaohao/login.html
+++ b/qiyexiaohao/login.html
@@ -33,7 +33,7 @@
 			
 			#login-form input {
 				padding: 10px 30px 0 2px;
-				font-size: 14px
+				font-size: 0.87rem
 			}
 			
 			#login-form button {
