--- a/qiyexiaohao/index.html
+++ b/qiyexiaohao/index.html
@@ -44,6 +44,9 @@
 				preloadPages: [{
 					"url": "contactDetail.html",
 					"id": "contactDetail"
+				},{
+					"url": "sendMsg.html",
+					"id": "sendMsg"
 				}]
 			});
 			//获取屏幕宽度
@@ -114,15 +117,14 @@
 					//更改当前活跃的选项卡
 					activeTab = targetTab;
 				});
-				if(!window.getItem("user_token")){
-					window.openView("login.html");
-				}
+//				if(!window.getItem("user_token")){
+//					window.openView("login.html");
+//				}
 				setTimeout(function() {
 					plus.navigator.closeSplashscreen(); //手动关闭启动页
 				}, 3000);
 				//设备唯一标识符
 				window.setItem("identifier",plus.device.uuid.substr(0,15));
-				console.log("device.uuid=======" + plus.device.uuid);
 			});
 			//自定义事件，模拟点击“首页选项卡”
 			document.addEventListener('goIndex', function() {
