--- a/qiyexiaohao/addContact.html
+++ b/qiyexiaohao/addContact.html
@@ -9,21 +9,7 @@
 		<link rel="stylesheet" href="css/mint-ui-style.css" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
-		<style>
-			.mui-input-group:before {
-				height: 0;
-			}
-			
-			.mg5 {
-				margin: 5px 0;
-			}
-			
-			.bottom_del_div {
-				position: fixed;
-				bottom: 0;
-				z-index: 9;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style/addContact.css" />
 	</head>
 
 	<body>
